--- a/genaiDbETLtool/src/chatResponse/ChatResponse.css
+++ b/genaiDbETLtool/src/chatResponse/ChatResponse.css
@@ -4,11 +4,12 @@
     flex-direction: column;
     gap: 10px;
     padding: 20px;
-    max-height: 400px;
+    /* max-height: 400px; */
     overflow-y: auto;
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: #f9f9f9;
+    height: 100%;
 }
 
 .chat-message {
